width issues on mobile nav fixed

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1184,6 +1184,7 @@ a.button-primary-outline {
     margin-right: 0;
     flex: auto;
     justify-content: space-around;
+    width: 33.33333333333333%;
   }
 }
 
